[package]
name = "solana-pumpfun-sniper"
version = "0.1.0"
edition = "2021"
description = "High-performance Solana Pump.fun sniper bot written in Rust"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# Solana SDK
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
bs58 = "0.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
dashmap = "5.5"
futures = "0.3"

# Optional: WebSocket support for real-time monitoring
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

[dependencies.spl-token]
version = "4.0"
features = ["no-entrypoint"]

[dependencies.spl-associated-token-account]
version = "3.0"
features = ["no-entrypoint"]

[dev-dependencies]
tokio-test = "0.4"
